--- a/.github/workflows/build-ale.yml
+++ b/.github/workflows/build-ale.yml
@@ -19,6 +19,8 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
     - uses: actions/checkout@v1
+    - name: Presubmit check
+      run: ./scripts/presubmit.sh
     - name: Install dependencies on Ubuntu
       if: matrix.os == 'ubuntu-latest'
       run: |
