--- a/cmake/ale-config.cmake.in
+++ b/cmake/ale-config.cmake.in
@@ -1,13 +1,20 @@
 @PACKAGE_INIT@
 
-set(USE_SDL @USE_SDL@)
+set(SDL_SUPPORT @SDL_SUPPORT@)
+set(SDL_DYNLOAD @SDL_DYNLOAD@)
 
 include(CMakeFindDependencyMacro)
 find_dependency(ZLIB REQUIRED)
 find_dependency(Threads REQUIRED)
 
-if (USE_SDL)
-    find_dependency(SDL REQUIRED)
+if (SDL_SUPPORT)
+  if (WIN32)
+    find_dependency(dlfcn-win32 REQUIRED)
+  endif()
+
+  if (NOT SDL_DYNLOAD)
+    find_dependency(SDL2 REQUIRED)
+  endif()
 endif()
 
 include("${CMAKE_CURRENT_LIST_DIR}/ale-targets.cmake")
