--- a/.github/workflows/build-ale.yml
+++ b/.github/workflows/build-ale.yml
@@ -11,51 +11,55 @@ on:
       - "*"
 
 jobs:
+  presubmit:
+    name: Presubmit checks
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - run: ./scripts/presubmit.sh
+
   build:
     name: Build ale on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
+    needs: presubmit
+    env:
+      VCPKG_DEFAULT_TRIPLET: "x64-windows"
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
     - uses: actions/checkout@v2
-    - name: Presubmit check
-      run: ./scripts/presubmit.sh
-    - uses: actions/setup-python@v1
-      name: Install Python ${{ matrix.python_version }}
+    - uses: actions/setup-python@v2
       with:
         python-version: "3.9"
     - name: Install Python dependencies
       run: |
         python -m pip install numpy pytest cmake
-    - name: Install dependencies on Ubuntu
+    - name: Install Ubuntu dependencies
       if: matrix.os == 'ubuntu-latest'
       run: |
         sudo apt-get update
-        sudo apt-get install libsdl1.2-dev
-    - name: Install dependencies on macOS
+        sudo apt-get install libsdl2-dev libsdl2-2.0-0
+    - name: Install macOS dependencies
       if: matrix.os == 'macos-latest'
       run: |
-        brew install sdl
-    - name: Install dependencies on Windows
+        brew install sdl2
+    - name: Install Windows dependencies
       if: matrix.os == 'windows-latest'
       run: |
-        vcpkg install zlib:x64-windows sdl1:x64-windows
-    - name: Configure ale with vcpkg
-      if: matrix.os == 'windows-latest'
-      run: |
-        mkdir build; cd build
-        cmake ../ `
-          -DCMAKE_TOOLCHAIN_FILE="$env:VCPKG_INSTALLATION_ROOT\scripts\buildsystems\vcpkg.cmake" `
-          -DVCPKG_TARGET_TRIPLET="x64-windows" `
-          -DUSE_SDL=ON
+        vcpkg install zlib:${env:VCPKG_DEFAULT_TRIPLET} `
+                      sdl2:${env:VCPKG_DEFAULT_TRIPLET} `
+                      dlfcn-win32:${env:VCPKG_DEFAULT_TRIPLET}
+        echo "$env:VCPKG_INSTALLATION_ROOT\installed\$env:VCPKG_DEFAULT_TRIPLET\bin" >> ${env:GITHUB_PATH}
     - name: Configure ale
-      if: matrix.os != 'windows-latest'
       run: |
         mkdir build; cd build
-        cmake ../ -DUSE_SDL=ON -DPython3_FIND_FRAMEWORK=NEVER
-    - name: Build & Test ale
+        cmake ../ -DSDL_SUPPORT=ON -DPython3_FIND_FRAMEWORK=NEVER
+    - name: Build ale
+      working-directory: ./build
       run: |
-        cd build
-        cmake --build . --config Debug
+        cmake --build . --config Debug --parallel 2
+    - name: Test ale
+      working-directory: ./build
+      run: |
         ctest -C Debug --progress -VV
