--- a/examples/cpp-interface/CMakeLists.txt
+++ b/examples/cpp-interface/CMakeLists.txt
@@ -7,5 +7,6 @@ find_package(ale REQUIRED)
 add_executable(sharedLibraryInterfaceExample sharedLibraryInterfaceExample.cpp)
 target_link_libraries(sharedLibraryInterfaceExample ale::ale-lib)
 
-add_executable(sharedLibraryInterfaceWithModesExample sharedLibraryInterfaceWithModesExample.cpp)
+add_executable(sharedLibraryInterfaceWithModesExample
+               sharedLibraryInterfaceWithModesExample.cpp)
 target_link_libraries(sharedLibraryInterfaceWithModesExample ale::ale-lib)
