--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -1,15 +1,16 @@
-target_sources(ale
-  PRIVATE
-    ColourPalette.cpp
-    Constants.cpp
-    display_screen.cpp
-    Log.cpp
-    Palettes.hpp
-    ScreenExporter.cpp
-    SoundExporter.cpp
-    SoundNull.cxx
-    SoundSDL.cxx
-    Version.hxx
-    VideoModeList.hxx
-    Array.hxx
-)
+target_sources(
+  ${PROJECT_NAME}
+  PRIVATE ColourPalette.cpp
+          Constants.cpp
+          Log.cpp
+          Palettes.hpp
+          ScreenExporter.cpp
+          SoundExporter.cpp
+          SoundNull.cxx
+          SoundSDL.cxx
+          SDL2.cpp
+          DynamicLoad.cpp
+          ScreenSDL.cpp
+          Version.hxx
+          VideoModeList.hxx
+          Array.hxx)
