--- a/src/games/CMakeLists.txt
+++ b/src/games/CMakeLists.txt
@@ -1,7 +1,2 @@
 add_subdirectory(supported)
-target_sources(ale
-  PRIVATE
-    Roms.cpp
-    RomSettings.cpp
-    RomUtils.cpp
-)
+target_sources(${PROJECT_NAME} PRIVATE Roms.cpp RomSettings.cpp RomUtils.cpp)
