--- a/src/os_dependent/CMakeLists.txt
+++ b/src/os_dependent/CMakeLists.txt
@@ -1,15 +1,5 @@
-if (WIN32)
-  target_sources(ale
-    PRIVATE
-      FSNodeWin32.cxx
-      OSystemWin32.cxx
-      SettingsWin32.cxx
-  )
-elseif (UNIX)
-  target_sources(ale
-    PRIVATE
-      FSNodePOSIX.cxx
-      OSystemUNIX.cxx
-      SettingsUNIX.cxx
-  )
+if(WIN32)
+  target_sources(${PROJECT_NAME} PRIVATE FSNodeWin32.cxx OSystemWin32.cxx SettingsWin32.cxx)
+elseif(UNIX)
+  target_sources(${PROJECT_NAME} PRIVATE FSNodePOSIX.cxx OSystemUNIX.cxx SettingsUNIX.cxx)
 endif()
