--- a/src/version.hpp.in
+++ b/src/version.hpp.in
@@ -1,8 +1,14 @@
 #ifndef __VERSION_HPP__
 #define __VERSION_HPP__
 
-#define ALE_VERSION "@PROJECT_VERSION@"
-#define ALE_GIT_SHA "@GIT_SHA@"
-#define ALE_VERSION_STR "@PROJECT_VERSION@+@GIT_SHA@"
+#define ALE_VERSION "@ALE_VERSION@"
+#define ALE_VERSION_MAJOR "@ALE_VERSION_MAJOR@"
+#define ALE_VERSION_MINOR "@ALE_VERSION_MINOR@"
+#define ALE_VERSION_PATCH "@ALE_VERSION_PATCH@"
+#define ALE_VERSION_GIT_SHA "@ALE_VERSION_GIT_SHA@"
+
+// This isn't entirely accurate, there's been
+// some changes post 2.4.2.
+#define STELLA_VERSION "2.4.2"
 
 #endif // __VERSION_HPP__
