--- a/.github/workflows/build-ale-py.yml
+++ b/.github/workflows/build-ale-py.yml
@@ -1,4 +1,4 @@
-name: Build ale-py
+name: Build ALE Python
 
 on:
   push:
@@ -7,49 +7,75 @@ on:
 
 jobs:
   build:
-    name: Build ale-py on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
+    name: Build ALE Python on ${{ matrix.config.os }}
+    runs-on: ${{ matrix.config.os }}
+    defaults:
+      run:
+        shell: bash
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        config: [
+          {"os": "ubuntu-latest", "deps": ["zlib", "sdl2"], "triplet": "x64-linux-mixed"},
+          {"os": "windows-latest", "deps": ["zlib", "sdl2"], "triplet": "x64-windows"},
+          {"os": "macos-latest", "deps": ["zlib", "sdl2"], "triplet": "x64-osx-mixed"}
+        ]
     steps:
     - uses: actions/checkout@v2
+
+    - name: Docker Login
+      if: matrix.config.os == 'ubuntu-latest'
+      run: docker login ghcr.io --username "${GITHUB_ACTOR}" --password "${GITHUB_CR_TOKEN}"
+      env:
+        GITHUB_CR_TOKEN: ${{ secrets.CR_TOKEN }}
+
     - uses: actions/setup-python@v1
-      name: Install Python ${{ matrix.python_version }}
+      name: Install Python
       with:
-        python-version: "3.7"
-    - name: Install dependencies
+        python-version: "3.9"
+
+    - name: "Tag release"
+      run: echo "ALE_BUILD_VERSION=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
+
+    - name: "Update vcpkg repository"
       run: |
-        python -m pip install cibuildwheel==1.5.5
+        git -C "$VCPKG_INSTALLATION_ROOT" fetch
+        git -C "$VCPKG_INSTALLATION_ROOT" reset --hard origin/master
+
+    - name: Install cibuildwheel
+      run: |
+        python -m pip install cibuildwheel==1.7.2
+
     - name: Build wheels
       run: |
         python -m cibuildwheel --output-dir wheelhouse
       env:
-        CIBW_MANYLINUX_X86_64_IMAGE: "manylinux2010"
-        CIBW_BUILD: "cp3?-*"
-        CIBW_SKIP: "*i686* *win32*"
+        CIBW_MANYLINUX_X86_64_IMAGE: "ghcr.io/jessefarebro/manylinux2014"
+        CIBW_BUILD: "cp3[6789]-*"
+        CIBW_SKIP: "*i686* *win32* cp36-win* cp37-win*"
         CIBW_TEST_REQUIRES: "pytest"
         CIBW_TEST_COMMAND: "pytest {project}"
-        CIBW_ENVIRONMENT: "GITHUB_REF=${{ github.ref }}"
-        CIBW_ENVIRONMENT_WINDOWS: "GITHUB_REF=${{ github.ref }} ALE_PY_CMAKE_ARGS=\"-DCMAKE_TOOLCHAIN_FILE='${VCPKG_INSTALLATION_ROOT}/scripts/buildsystems/vcpkg.cmake' -DVCPKG_TARGET_TRIPLET='x64-windows-static'\""
-        CIBW_BEFORE_BUILD_LINUX: "yum install -y zlib-devel"
-        CIBW_BEFORE_BUILD_WINDOWS: "vcpkg install zlib:x64-windows-static"
+        CIBW_ENVIRONMENT: "VCPKG_DEFAULT_TRIPLET=${{ matrix.config.triplet }} MACOSX_DEPLOYMENT_TARGET='10.9' ALE_BUILD_VERSION=${{ env.ALE_BUILD_VERSION }}"
+        CIBW_BEFORE_ALL: "vcpkg install ${{ join(matrix.config.deps, ' ') }} --triplet ${{ matrix.config.triplet }} --overlay-triplets cmake/custom-triplets --feature-flags=-compilertracking"
     - uses: actions/upload-artifact@v1
       with:
         name: wheels
         path: wheelhouse
+
+
   pypi:
-    name: Deploy ale-py to PyPi test
+    name: Deploy ALE Python to PyPi test
     runs-on: ubuntu-latest
     needs: build
     steps:
       - uses: actions/download-artifact@v1
         with:
           name: wheels
-      - name: Append build identifier
+
+      - name: Append PyPi test SHA 
         run: |
-          find wheels -type f -exec sh -c "mv {} \$(echo {} | awk -F\"-\" '{OFS = FS; \$2 = \$2\".dev${{ github.run_number }}+${{ github.sha }}\"; print}')" \;
-          ls wheels
+          find wheels -type f -exec sh -c \
+            "mv {} \$(echo {} | awk -F\"-\" '{OFS = FS; \$2 = \$2\"+${GITHUB_SHA::7}\"; print}')" \;
+
       - name: Publish to PyPi test
         uses: pypa/gh-action-pypi-publish@master
         with:
@@ -57,17 +83,21 @@ jobs:
           password: ${{ secrets.pypi_test_token }}
           repository_url: https://test.pypi.org/legacy/
           packages_dir: wheels/
+
+
   release:
-    name: Stage ale-py to Github releases
+    name: Stage ALE Python to Github releases
     runs-on: ubuntu-latest
     needs: build
     steps:
       - uses: actions/download-artifact@v1
         with:
           name: wheels
+
       - name: Create wheel archive
         run: |
           zip --junk-paths ale-py wheels/*
+
       - name: Create release
         id: create_release
         uses: actions/create-release@v1.0.0
@@ -78,6 +108,7 @@ jobs:
           release_name: Release ${{ github.ref }}
           draft: true
           prerelease: ${{ contains(github.ref, '-') }}
+
       - name: Upload artifacts to release
         uses: actions/upload-release-asset@v1.0.1
         env:
