--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,42 +1,46 @@
 option(BUILD_PYTHON_LIB "Build Python Interface" ON)
 option(BUILD_CPP_LIB "Build C++ Interface" ON)
-option(USE_SDL "Build with SDL support" OFF)
+option(SDL_SUPPORT "Enable SDL support" ON)
 
 # Include src/ and cmake binary directory (for version.hpp)
-include_directories(BEFORE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
+include_directories(BEFORE ${CMAKE_CURRENT_SOURCE_DIR}
+                    ${CMAKE_CURRENT_BINARY_DIR})
 
 # Project specific target properties
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
 set(CMAKE_POSITION_INDEPENDENT_CODE TRUE)
 
 # Compiler options
 add_compile_options(
-  "$<$<CONFIG:RELEASE>:-O3>"
-  "$<$<CONFIG:DEBUG>:-O0>"
+  "$<$<CONFIG:RELEASE>:-O3>" "$<$<CONFIG:DEBUG>:-O0>"
   "$<$<CXX_COMPILER_ID:GNU,Clang,AppleClang>:-Wall>"
   "$<$<CXX_COMPILER_ID:MSVC>:/W4>")
 
 # ale object containing source files
-add_library(ale OBJECT)
+add_library(${PROJECT_NAME} OBJECT)
 
 # Dependencies
 find_package(ZLIB REQUIRED)
 find_package(Threads REQUIRED)
-target_link_libraries(ale
-  PRIVATE
-    ZLIB::ZLIB
-    Threads::Threads)
+target_link_libraries(${PROJECT_NAME} PRIVATE ZLIB::ZLIB Threads::Threads)
 
-if (USE_SDL)
-  target_compile_definitions(ale
-    PUBLIC
-      -D__USE_SDL
-      -DSOUND_SUPPORT)
-  find_package(SDL REQUIRED)
-  target_include_directories(ale PUBLIC ${SDL_INCLUDE_DIR})
-  target_link_libraries(ale PUBLIC ${SDL_LIBRARY})
+if(SDL_SUPPORT)
+  option(SDL_DYNLOAD "Dynamically load SDL" OFF)
+  find_package(SDL2 CONFIG REQUIRED)
+
+  # VCPKG doesn't include SDL2_INCLUDE_DIRS
+  if(VCPKG_TOOLCHAIN)
+    find_path(SDL2_INCLUDE_DIRS SDL.h PATH_SUFFIXES SDL2)
+  endif()
+
+  target_compile_definitions(
+    ${PROJECT_NAME}
+    PUBLIC SDL_SUPPORT
+    PRIVATE $<$<BOOL:${SDL_DYNLOAD}>:SDL_DYNLOAD>)
+  target_link_libraries(${PROJECT_NAME} PRIVATE $<$<NOT:$<BOOL:${SDL_DYNLOAD}>>:SDL2::SDL2>)
+  target_include_directories(${PROJECT_NAME} PRIVATE ${SDL2_INCLUDE_DIRS})
 endif()
 
 # Add submodules
@@ -46,90 +50,112 @@ add_subdirectory(os_dependent)
 add_subdirectory(environment)
 add_subdirectory(games)
 
-find_package(Git QUIET)
-if(GIT_FOUND)
-  execute_process(
-    COMMAND ${GIT_EXECUTABLE} rev-parse --short HEAD
-    WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}"
-    OUTPUT_VARIABLE GIT_SHA
-    ERROR_QUIET
-    OUTPUT_STRIP_TRAILING_WHITESPACE)
-endif()
-if (NOT GIT_SHA)
-  set(GIT_SHA "(unknown)")
-endif()
-configure_file ("version.hpp.in" "version.hpp")
+configure_file("version.hpp.in" "version.hpp")
 
 # C++ Library
-if (BUILD_CPP_LIB)
-  add_library(ale-lib ale_interface.cpp)
-  set_target_properties(ale-lib PROPERTIES OUTPUT_NAME ale)
-  target_link_libraries(ale-lib PUBLIC ale)
+if(BUILD_CPP_LIB)
+  add_library(${PROJECT_NAME}Interface ale_interface.cpp)
+  set_target_properties(${PROJECT_NAME}Interface PROPERTIES OUTPUT_NAME $<LOWER_CASE:${PROJECT_NAME}>)
+  target_link_libraries(${PROJECT_NAME}Interface PUBLIC ${PROJECT_NAME})
 endif()
 
 # Python Interface
-if (BUILD_PYTHON_LIB)
-  find_package(Python3 COMPONENTS Interpreter Development REQUIRED)
+if(BUILD_PYTHON_LIB)
+  find_package(
+    Python3
+    COMPONENTS Interpreter Development.Module
+    REQUIRED)
 
   include(FetchContent)
   FetchContent_Declare(
-      pybind11
-      GIT_REPOSITORY https://github.com/pybind/pybind11
-      GIT_TAG v2.6.1)
+    pybind11
+    GIT_REPOSITORY https://github.com/pybind/pybind11
+    GIT_TAG v2.6.1)
   FetchContent_MakeAvailable(pybind11)
 
-  add_library(ale-py MODULE ale_interface.cpp ale_python_interface.cpp)
-  target_link_libraries(ale-py PUBLIC ale)
-  target_link_libraries(ale-py PRIVATE pybind11::module)
-  set_target_properties(ale-py PROPERTIES OUTPUT_NAME ale_py
-                                          PREFIX "${PYTHON_MODULE_PREFIX}"
-                                          SUFFIX "${PYTHON_MODULE_EXTENSION}")
+  add_library(${PROJECT_NAME}PythonInterface MODULE ale_interface.cpp ale_python_interface.cpp)
+  target_link_libraries(${PROJECT_NAME}PythonInterface PUBLIC ${PROJECT_NAME})
+  target_link_libraries(${PROJECT_NAME}PythonInterface PRIVATE pybind11::module)
+  set_target_properties(
+    ${PROJECT_NAME}PythonInterface
+    PROPERTIES OUTPUT_NAME _$<LOWER_CASE:${PROJECT_NAME}>_py
+               PREFIX "${PYTHON_MODULE_PREFIX}"
+               SUFFIX "${PYTHON_MODULE_EXTENSION}")
+  # If we're dynamically loading SDL with Python we'll be build a wheel
+  # so we should prepare SDL for distribution. Add rpath and copy over
+  # the dynamic library. auditwheel will take care of ensuring
+  # corss-platform compatability on macOS and Linux.
+  if(SDL_SUPPORT AND SDL_DYNLOAD)
+    set_target_properties(
+      ${PROJECT_NAME}PythonInterface
+      PROPERTIES
+        INSTALL_RPATH_USE_ORIGIN TRUE
+        BUILD_WITH_INSTALL_RPATH TRUE
+        SKIP_BUILD_RPATH FALSE
+        INSTALL_RPATH_USE_LINK_PATH FALSE
+        MACOSX_RPATH TRUE
+        INSTALL_RPATH
+        "$<$<PLATFORM_ID:Darwin>:@loader_path>$<$<PLATFORM_ID:Linux>:\$ORIGIN>")
+
+    target_compile_definitions(
+      ${PROJECT_NAME} PRIVATE SDL2_LIBRARY_NAME="$<TARGET_FILE_NAME:SDL2::SDL2>")
+    add_custom_command(
+      TARGET ${PROJECT_NAME}PythonInterface
+      POST_BUILD
+      COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:SDL2::SDL2>
+      $<TARGET_FILE_DIR:${PROJECT_NAME}PythonInterface>)
+  endif()
 endif()
 
-
 # Install cpp-lib and CMake config & pkg-config
-if (UNIX AND BUILD_CPP_LIB)
+if(UNIX AND BUILD_CPP_LIB)
   include(GNUInstallDirs)
   include(CMakePackageConfigHelpers)
 
-  install(TARGETS ale ale-lib
-          EXPORT ale-export
-          INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}
-          RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-          LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-          ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
+  string(TOLOWER ${PROJECT_NAME} INSTALL_DIR)
+
+  install(
+    TARGETS ${PROJECT_NAME} ${PROJECT_NAME}Interface
+    EXPORT ${PROJECT_NAME}Config
+    INCLUDES
+    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${INSTALL_DIR}
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
   # Install Header files
-  install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/
-          DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}
-          FILES_MATCHING
-          REGEX "\.h((pp)?|(xx?))$"
-          REGEX "os_dependent\/.*(Win32)\.(h|h(xx)?|h(pp)?|c(xx)?|c(pp)?)$" EXCLUDE)
+  install(
+    DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/
+    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${INSTALL_DIR}
+    FILES_MATCHING
+    REGEX "\.h((pp)?|(xx?))$"
+    REGEX "os_dependent\/.*(Win32)\.(h|h(xx)?|h(pp)?|c(xx)?|c(pp)?)$" EXCLUDE)
 
   # Install configured version file
   install(FILES ${CMAKE_CURRENT_BINARY_DIR}/version.hpp
-          DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME})
+          DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${INSTALL_DIR})
 
   # Export cmake targets
-  install(EXPORT ale-export
-          FILE ${PROJECT_NAME}-targets.cmake
-          NAMESPACE ${PROJECT_NAME}::
-          DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME})
+  install(
+    EXPORT ${PROJECT_NAME}Config
+    FILE ${PROJECT_NAME}Targets.cmake
+    NAMESPACE ${PROJECT_NAME}::
+    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${INSTALL_DIR})
 
-  # Write config-version
+  # Write config version
   write_basic_package_version_file(
-    ${PROJECT_NAME}-config-version.cmake
+    ${PROJECT_NAME}ConfigVersion.cmake
     VERSION ${PACKAGE_VERSION}
     COMPATIBILITY AnyNewerVersion)
 
   # Configure installable cmake config
   configure_package_config_file(
-    ${CMAKE_MODULE_PATH}/${PROJECT_NAME}-config.cmake.in
-    ${PROJECT_NAME}-config.cmake
-    INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME})
+    ${CMAKE_MODULE_PATH}/${PROJECT_NAME}Config.cmake.in
+    ${PROJECT_NAME}Config.cmake
+    INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${INSTALL_DIR})
 
-  # Install config-version and config
-  install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config.cmake"
-                "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config-version.cmake"
-          DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME})
+  # Install config version and config
+  install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
+                "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake"
+          DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${INSTALL_DIR})
 endif()
