--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 option(BUILD_PYTHON_LIB "Build Python Interface" ON)
 option(BUILD_CPP_LIB "Build C++ Interface" ON)
-option(USE_SDL "Build with SDL support" OFF)
+option(SDL_SUPPORT "Enable SDL support" ON)
 
 # Include src/ and cmake binary directory (for version.hpp)
 include_directories(BEFORE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
@@ -29,14 +29,25 @@ target_link_libraries(ale
     ZLIB::ZLIB
     Threads::Threads)
 
-if (USE_SDL)
-  target_compile_definitions(ale
-    PUBLIC
-      -D__USE_SDL
-      -DSOUND_SUPPORT)
-  find_package(SDL REQUIRED)
-  target_include_directories(ale PUBLIC ${SDL_INCLUDE_DIR})
-  target_link_libraries(ale PUBLIC ${SDL_LIBRARY})
+if (SDL_SUPPORT)
+  option(SDL_DYNLOAD "Dynamically load SDL" ON)
+  find_package(SDL2 REQUIRED)
+
+  if (WIN32)
+    find_package(dlfcn-win32 REQUIRED)
+    target_link_libraries(ale PRIVATE dlfcn-win32::dl)
+  endif()
+
+  # VCPKG doesn't include SDL2_INCLUDE_DIRS
+  if (VCPKG_TOOLCHAIN)
+    find_path(SDL2_INCLUDE_DIRS SDL.h PATH_SUFFIXES SDL2)
+  endif()
+
+  target_compile_definitions(ale PUBLIC SDL_SUPPORT)
+  target_link_libraries(ale
+    PRIVATE
+      $<$<NOT:$<BOOL:${SDL_DYNLOAD}>>:SDL2::SDL2>)
+  target_include_directories(ale PRIVATE ${SDL2_INCLUDE_DIRS})
 endif()
 
 # Add submodules
