--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 option(BUILD_PYTHON_LIB "Build Python Interface" ON)
 option(BUILD_CPP_LIB "Build C++ Interface" ON)
-option(USE_SDL "Build with SDL support" OFF)
+option(SDL_SUPPORT "Enable SDL support" ON)
 
 # Include src/ and cmake binary directory (for version.hpp)
 include_directories(BEFORE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
@@ -30,14 +30,22 @@ target_link_libraries(ale
     ZLIB::ZLIB
     Threads::Threads)
 
-if (USE_SDL)
+if(SDL_SUPPORT)
+  option(SDL_DYNLOAD "Dynamically load SDL" OFF)
+  find_package(SDL2 CONFIG REQUIRED)
+
+  # VCPKG doesn't include SDL2_INCLUDE_DIRS
+  # if(VCPKG_TOOLCHAIN)
+  #   find_path(SDL2_INCLUDE_DIRS SDL.h PATH_SUFFIXES SDL2)
+  # endif()
+
   target_compile_definitions(ale
     PUBLIC
-      -D__USE_SDL
-      -DSOUND_SUPPORT)
-  find_package(SDL REQUIRED)
-  target_include_directories(ale PUBLIC ${SDL_INCLUDE_DIR})
-  target_link_libraries(ale PUBLIC ${SDL_LIBRARY})
+      SDL_SUPPORT
+    PRIVATE
+      $<$<BOOL:${SDL_DYNLOAD}>:SDL_DYNLOAD>)
+  target_link_libraries(ale PRIVATE $<$<NOT:$<BOOL:${SDL_DYNLOAD}>>:SDL2::SDL2>)
+  target_include_directories(ale PRIVATE ${SDL2_INCLUDE_DIRS})
 endif()
 
 # Add submodules
@@ -72,6 +80,29 @@ if (BUILD_PYTHON_LIB)
   set_target_properties(ale-py PROPERTIES OUTPUT_NAME ale_py
                                           PREFIX "${PYTHON_MODULE_PREFIX}"
                                           SUFFIX "${PYTHON_MODULE_EXTENSION}")
+  # If we're dynamically loading SDL with Python we'll be build a wheel
+  # so we should prepare SDL for distribution. Add rpath and copy over
+  # the dynamic library. auditwheel will take care of ensuring
+  # corss-platform compatability on macOS and Linux.
+  if (SDL_SUPPORT AND SDL_DYNLOAD)
+    set_target_properties(ale-py
+      PROPERTIES
+        INSTALL_RPATH_USE_ORIGIN TRUE
+        BUILD_WITH_INSTALL_RPATH TRUE
+        SKIP_BUILD_RPATH FALSE
+        INSTALL_RPATH_USE_LINK_PATH FALSE
+        MACOSX_RPATH TRUE
+        INSTALL_RPATH
+        "$<$<PLATFORM_ID:Darwin>:@loader_path>$<$<PLATFORM_ID:Linux>:\$ORIGIN>")
+
+    target_compile_definitions(ale
+      PRIVATE SDL2_LIBRARY_NAME="$<TARGET_FILE_NAME:SDL2::SDL2>")
+    add_custom_command(
+      TARGET ale-py
+      POST_BUILD
+      COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:SDL2::SDL2>
+      $<TARGET_FILE_DIR:ale-py>)
+  endif()
 endif()
 
 
